Fix missing color variable

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -607,7 +607,7 @@ h4 {
 
   th,
   td {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid $grey-100;
   }
 
   pre,
